--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/chechecarer/radarTechProject#readme",
   "dependencies": {
-    "react": "^0.13.3",
+    "react": "^0.14.0",
+    "react-redux": "^4.4.5",
+    "redux": "^3.5.2",
     "sass": "^0.5.0"
   },
   "devDependencies": {
@@ -33,6 +35,7 @@
     "node-sass": "^3.2.0",
     "open": "0.0.5",
     "postcss-loader": "^0.10.0",
+    "redux-devtools": "^3.3.1",
     "sass-loader": "^1.0.2",
     "style-loader": "^0.12.3",
     "url-loader": "^0.5.6",
