--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   },
   "homepage": "https://github.com/chechecarer/radarTechProject#readme",
   "dependencies": {
-    "react": "^0.14.0",
+    "react": "^15.3.0",
+    "react-dom": "^15.3.0",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
     "sass": "^0.5.0"
